# ai-regression-webapp

./: .gitignore  README.md  config.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.bat  setup.py  setup.sh
.kiro/specs/regression-prediction-app/: design.md  requirements.md
api/: main.py
examples/: api_examples.md  test_api.py
frontend/: index.html  script.js  style.css
models/: model_loader.py  train_model.py
models/saved/: linear_regression_metadata.json  linear_regression_model.joblib  linear_regression_scaler.joblib  random_forest_metadata.json
notebooks/: model_analysis.ipynb
tests/: test_api.py  test_model_loader.py
